# dafx25-ddsp-tutorial

./: .gitignore  README.md  pyproject.toml
data/results/loss_landscape/: partial_loss_run_1.mat  partial_loss_run_1_edr.mat  partial_loss_run_1_mss.mat
src/ddsp/: fdn.py  loss.py  utils.py
src/notebooks/: loss_landscape.ipynb  peq_optimization.ipynb
